<resources>
    <string name="app_name">RemittanceTracker</string>
    <string name="string_total_cash_in">Total Cash In : </string>
    <string name="string_total_cash_out">Total Cash Out</string>
    <string name="string_hc_total_cash">Tk 2500000</string>
    <string name="hc_date">Date : 04/07/21</string>
    <string name="hc_day">Wednesday</string>
    <string name="label_fund_transfer">Fund Transfer</string>
    <string name="string_send_money">Send Money</string>
    <string name="string_rcv_money">Receive Money</string>
    <string name="string_create_agent">Create Agent</string>
    <string name="label_name">Name</string>
    <string name="label_amount">Amount</string>
    <string name="label_city">City</string>
    <string name="label_medium">Medium</string>
    <string name="label_bank">Bank</string>
    <string name="label_bkash">BKash</string>
    <string name="hint_account_name">Account Name</string>
    <string name="label_acc_number">Account Number</string>
    <string name="label_email">Email</string>
    <string name="label_password">Password</string>
    <string name="label_date">Date</string>
    <string name="label_total_cash_in">Total Cash In</string>
    <string name="label_welcome">Welcome</string>
    <string name="label_create_agent">Create Agent</string>
    <string name="label_create">Create</string>
    <string name="label_user_name">User Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_send_money">Send MOney</string>
    <string name="label_send">Send</string>
    <string name="label_receive">Receive</string>
    <string name="label_payment_method">Bank/Bkash</string>
    <string name="label_no_data">No data found</string>
    <string name="channel_transaction">remittence_transaction</string>
    <string name="channel_order_confirmed_name">channel_transaction</string>
    <string name="notification_title_order_rcvd">New Transaction</string>
</resources>