<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.home.HomeFragment">

    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="com.example.remittancetracker.ui.transaction.TransactionViewModel" >
        </variable>

    </data>



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_top_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_top_background"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tv_total_cash_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewModel.transactionDetailType}"
            tools:text="@string/label_total_cash_in"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_size_large"
            android:fontFamily="@font/roboto_bold"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="@+id/iv_top_bg"
            app:layout_constraintEnd_toEndOf="@+id/iv_top_bg"
            app:layout_constraintTop_toTopOf="@+id/iv_top_bg"
            app:layout_constraintBottom_toBottomOf="@+id/iv_top_bg"

            />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spaceNormal"
            android:layout_marginBottom="@dimen/space4dp"
            android:textColor="@color/colorTextDark"
            android:textStyle="italic"
            app:layout_constraintBottom_toTopOf="@+id/divider_top"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="@string/hc_date" />

        <TextView
            android:id="@+id/tv_day"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spaceNormal"
            android:textColor="@color/colorTextDark"
            android:textStyle="italic"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_date"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="@string/hc_day" />


        <View
            android:id="@+id/divider_top"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="@dimen/spaceNormal"
            android:layout_marginTop="@dimen/space4dp"
            android:layout_marginEnd="@dimen/spaceNormal"
            android:layout_marginBottom="@dimen/space4dp"
            android:background="@color/colorTextDark"
            app:layout_constraintTop_toBottomOf="@+id/iv_top_bg" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_transaction_detail"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/spaceNormal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider_two"
            tools:listitem="@layout/list_item_transaction_detail" />

        <TextView
            android:id="@+id/label_no_data"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/label_no_data"
            android:textColor="@color/light_blue_A200"
            android:fontFamily="@font/roboto_condensed_bold"
            android:textAlignment="center"
            android:visibility="@{viewModel.showNoData?View.VISIBLE:View.GONE}"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />


        <TextView
            android:id="@+id/label_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/label_name"
            android:textColor="@color/light_blue_A200"
            android:fontFamily="@font/roboto_condensed_bold"
            android:textStyle="italic"
            android:layout_marginStart="@dimen/spaceNormal"
            app:layout_constraintBaseline_toBaselineOf="@+id/label_account_number"
            app:layout_constraintEnd_toStartOf="@+id/label_account_number"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/label_account_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/label_acc_number"
            android:textColor="@color/light_blue_A200"
            android:fontFamily="@font/roboto_condensed_bold"
            android:textStyle="italic"
            android:layout_marginTop="@dimen/spaceNormal"
            app:layout_constraintTop_toBottomOf="@+id/divider_top"
            app:layout_constraintBottom_toTopOf="@+id/divider_two"
            app:layout_constraintEnd_toStartOf="@+id/label_date"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/label_name" />

        <TextView
            android:id="@+id/label_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/label_date"
            android:textColor="@color/light_blue_A200"
            android:fontFamily="@font/roboto_condensed_bold"
            android:textStyle="italic"
            android:layout_marginEnd="@dimen/spaceLarge"
            android:textAlignment="textEnd"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/label_account_number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@+id/label_account_number"
            />

        <View
            android:id="@+id/divider_two"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="@dimen/spaceNormal"
            android:layout_marginTop="@dimen/space4dp"
            android:layout_marginEnd="@dimen/spaceNormal"
            android:layout_marginBottom="@dimen/space4dp"
            android:background="@color/light_blue_900"
            app:layout_constraintTop_toBottomOf="@id/label_account_number"/>



    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>